[project]
name = "inaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "xmltodict>=0.13.0",
    "types-xmltodict>=0.13.0.3",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
]
